# cg_hw1

./: README.md
src/App/: CMakeLists.txt  fractal.cpp  fractal.h  main.cpp  mainwindow.cpp  mainwindow.h
src/App/Shaders/: fractal.fs  fractal.vs
src/Base/: CMakeLists.txt  GLWindow.cpp  GLWindow.h
